# Logos

./: .gitignore  README.md  pyproject.toml
models/: __init__.py  baseline.py  hybrid.py  linear.py  lm_loss.py  logos.py  recursive.py  residual.py  superlinear.py
models_jax/: __init__.py  base.py  kda.py  lm_loss.py  logos.py  moe.py  residual.py  retrieval.py  swa.py
notebooks/: baseline_debug.ipynb  pretrain_logos_colab.ipynb  pretrain_logos_tpu_v6e_colab.ipynb  train_colab.ipynb
scripts/: export_safetensors.py  pretrain_logos_1b_20b_nvlink.sh  run_wandb_bakeoff_1b.sh  train.py  train_chat.py  train_xla.py
scripts_jax/: __init__.py  train.py
tests/: test_compressed_rope.py  test_csa_indexer_loss.py  test_streaming_resume.py  test_token_superposition.py  test_wandb_mode.py  test_weight_decay_groups.py
utils/: __init__.py  diagnostics.py  tokenizer.py
