[project]
name = "logos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "transformers>=5.5.4",
    "datasets>=4.8.4",
    "tiktoken>=0.12.0",
    "torchao>=0.17.0",
    "einops>=0.8.2",
]

[tool.uv]
find-links = [
    "https://download.pytorch.org/whl/cu130",
]
