[project]
name = "logos"
version = "0.1.0"
description = "Logos — sub-quadratic decoder-only transformer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "transformers>=5.5.4",
    "datasets>=4.8.4",
    "tiktoken>=0.12.0",
    "torchao>=0.17.0",
    "einops>=0.8.2",
    "jax>=0.5.0",
    "jaxlib>=0.5.0",
    "flax>=0.10.0",
    "optax>=0.2.0",
    "orbax-checkpoint>=0.10.0",
    "tqdm",
    "numpy",
]

[project.optional-dependencies]
wandb = ["wandb>=0.18"]

[tool.uv]
find-links = [
    "https://download.pytorch.org/whl/cu130",
]
